# introCompVision

./: pyproject.toml
notebooks/: Ch-8.Cats_vs_Dogs_fist.ipynb  Ch-8.Intro_to_CNN.ipynb
